# catalogue

./: README.md  azure-pipelines.yml  catalogue.py  requirements.txt  setup.cfg  setup.py  test_catalogue.py
.github/workflows/: tests.yml
catalogue/: __init__.py  registry.py
catalogue/_importlib_metadata/: LICENSE  __init__.py  backports.py
catalogue/config/: config.py  util.py
catalogue/tests/: registration.py  test_01_config.py  test_02_catalogue.py  test_catalogue.py  test_config.py  util.py
